<resources>
    <string name="app_name">Tout-Doux App</string>
    <string name="titleApp">Tout-Doux App</string>
    <string name="titleNewNote">Ajouter une nouvelle note</string>
    <string name="description">Description</string>
    <string name="nomTache">Nom</string>
    <string name="dureeTache">Durée</string>
    <string name="dateTache">Date</string>
    <string name="nameTaskAdd">Nom de la tâche</string>
    <string name="descriptionTaskAdd">Description de la tâche</string>
    <string name="saveTask">Sauvegarder la tâche</string>

    <string name="title_activity_my_web_view_client">Webview</string>
    <string name="tutoText">Balayez une tâche pour la supprimer\nClic long pour l\'éditer\nClic court pour compléter</string>
    <string name="urlHint">Lien vers une page web</string>
    <string name="colorChooseTitle">Choisir une couleur</string>
    <string name="itemMenu">Item</string>
    <string name="appwidget_text">Dernière tâche</string>
    <string name="add_widget">Ajouter un widget</string>

</resources>
